LoopNode::verify_strip_mined() fails with "assert failed: only phis"

XMLWordPrintable

    • b36
    • Verified

      While compiling AOT code using a debug build, this assert happened:

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/tmp/jenkins/workspace/Build-jdk10-DEBUG-nightly-with-AOT/jdk10/open/src/hotspot/share/opto/loopnode.cpp:945), pid=17905, tid=17974
      # assert(outer->outcnt() >= phis + 2 && outer->outcnt() <= phis + 2 + stores + 1) failed: only phis
      #
      # JRE version: Java(TM) SE Runtime Environment (10.0) (slowdebug build 10-internal+0-2017-11-29-1316397.ecaspole.jdk10)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 10-internal+0-2017-11-29-1316397.ecaspole.jdk10, mixed mode, aot, tiered, jvmci, g1 gc, linux-amd64)
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /tmp/jenkins/workspace/Build-jdk10-DEBUG-nightly-with-AOT/jdk10/core.17905)
      #
      # An error report file with more information is saved as:
      # /tmp/jenkins/workspace/Build-jdk10-DEBUG-nightly-with-AOT/jdk10/hs_err_pid17905.log
      #
      # Compiler replay data is saved as:
      # /tmp/jenkins/workspace/Build-jdk10-DEBUG-nightly-with-AOT/jdk10/replay_pid17905.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      This is the first time this ever happened in this Jenkins job AFAICT.

        1. hs_err_pid17905.log
          502 kB
        2. replay_pid17905.log
          305 kB
        3. hs_err_pid17905.log
          502 kB

            Assignee:
            Roland Westrelin
            Reporter:
            Eric Caspole
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: