8192762: LoopNode::verify_strip_mined() fails with "assert failed: only phis"

Don't clone Phi to uncommon calls

Reviewed-by: kvn